--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -803,8 +803,8 @@ Tip.6=<html>Você pode fazer suas "entradas" mais rápidas com os atalhos to tecla
 # Added or modified since last translation
 
 #-------- AccountsSummary View --------
-AccountsSummary.title=Accounts summary
-AccountsSummary.tooltip=Summary of all accounts
+AccountsSummary.title=Sumário da conta
+AccountsSummary.tooltip=Sumário de todas as contas
 AccountsSummary.CheckedBalance=Balan\u00e7o verificado
 AccountsSummary.CurrentBalance=Balan\u00e7o atual
 AccountsSummary.FinalBalance=Balan\u00e7o final
@@ -812,59 +812,59 @@ AccountsSummary.FinalBalance=Balan\u00e7o final
 
 #-------- Balance History view --------
 #Introducing a new sub-panel in the balance history panel
-BalanceHistory.toolTip=Day-to-day balance
-BalanceHistory.graph.title=Chart
-BalanceHistory.transaction.title=Transactions
-BalanceHistory.transaction.tooltip=Day-to-day transactions and balance
-BalanceHistory.transaction.remainingBalance=Remaining balance
+BalanceHistory.toolTip=balanço diário
+BalanceHistory.graph.title=gráfico
+BalanceHistory.transaction.title=Transações
+BalanceHistory.transaction.tooltip=Transações e balanço diário
+BalanceHistory.transaction.remainingBalance=balanço restante
 
 #-------- New "important news" screen -------
-ImportantNews.title=Important news
-ImportantNews.intro=The latest Yapbam update has resulted in significant changes below
-ImportantNews.0.8.2=The <b>{0}</b> has been moved from <b>{1}</b> tab to <b>{2}</b> tab.<br><br> The purpose of this change is to avoid checking errors. Indeed, in the view <b>{1}</b>, it was possible to check by mistake, a transaction already checked, or belonging to the wrong account.<br>The <b>{0}</b> is now only available in the view <b>{2}</b> when <b>{3}</b> menu item is selected, which makes these errors impossible.
+ImportantNews.title=Notícias Importantes
+ImportantNews.intro=A última atualização do Yapbam teve resultados significante abaixo 
+ImportantNews.0.8.2=O <b>{0}</b> foi movido <b>{1}</b> tab para <b>{2}</b> tab.<br><br> O propósito destas mudanças foi para evitar erros. De fato, na vista <b>{1}</b>, era possível selecionar erradamente, uma transação já selecionada, ou que pertence a outra contra.<br>The <b>{0}</b> está disponível na vista <b>{2}</b> quando <b>{3}</b> o item do menu for selecionado, o que seria impossível de acontecer estes erros.
 
 #-------- New preference panel about transaction editing -------
-TransactionEditingPreferencesPanel.title=Transaction editing
-TransactionEditingPreferencesPanel.tooltip=This tab allows you to configure the behaviour of transaction editing
-TransactionEditingPreferencesPanel.alertIfChangeChecked=Alert me if I delete or change a checked transaction
-TransactionEditingPreferencesPanel.alertIfChangeChecked.tooltip=Check this box to be alerted if you change the amount, number or statement id of a checked transaction or if you delete it
-TransactionEditingPreferencesPanel.alertIfDelete=Ask me for confirmation before deleting a transaction
-TransactionEditingPreferencesPanel.alertIfDelete.tooltip=Check this box to be asked for confirmation before deleting a transaction
-TransactionEditingPreferencesPanel.autoFillStatementId=Automatically fill the statement id
-TransactionEditingPreferencesPanel.autoFillStatementId.tooltip=Check this box to automatically fill the statement id of transactions
-TransactionEditingPreferencesPanel.statementBasedOnDate=Based on date
-TransactionEditingPreferencesPanel.statementBasedOnDate.tooltip=Select this to have statement id based on transaction's date
-TransactionEditingPreferencesPanel.statementBasedOnValueDate=Based on value date
-TransactionEditingPreferencesPanel.statementBasedOnValueDate.tooltip=Select this to have statement id based on transaction's value date
-TransactionEditingPreferencesPanel.format.title=Format
+TransactionEditingPreferencesPanel.title=Editando transação
+TransactionEditingPreferencesPanel.tooltip=Esta aba permite-lhe configurar a transação quando estiver editando
+TransactionEditingPreferencesPanel.alertIfChangeChecked=Alerte me em caso de eu ter deletado ou mudado a transação selecionada
+TransactionEditingPreferencesPanel.alertIfChangeChecked.tooltip=Selecione esta caixa para ser alertado se você mudou o valor, número ou statment id da transação selecionada ou se você deletou a mesma
+TransactionEditingPreferencesPanel.alertIfDelete=Confirme comigo antes de deletar uma transação
+TransactionEditingPreferencesPanel.alertIfDelete.tooltip=Selecione esta caixa para ser confirmado antes de deletar uma transação
+TransactionEditingPreferencesPanel.autoFillStatementId=Preenche automaticamente a identificação da conta
+TransactionEditingPreferencesPanel.autoFillStatementId.tooltip=Selecione esta caixa para preencher automaticamente a identificação da conta das transações
+TransactionEditingPreferencesPanel.statementBasedOnDate=Baseado no dia
+TransactionEditingPreferencesPanel.statementBasedOnDate.tooltip=Selecione esta para ter a identificação da conta baseada no dia da transação
+TransactionEditingPreferencesPanel.statementBasedOnValueDate=Baseado no valor do dia
+TransactionEditingPreferencesPanel.statementBasedOnValueDate.tooltip=Selecione esta para ter a identificação da conta baseada no valor do dia da transação
+TransactionEditingPreferencesPanel.format.title=Formato
 TransactionEditingPreferencesPanel.format.long=Long Style (example: {0})
-TransactionEditingPreferencesPanel.format.long.tooltip=Select this to have long statement id
-TransactionEditingPreferencesPanel.format.short=Short Style (example: {0})
-TransactionEditingPreferencesPanel.format.short.tooltip=Select this to have short statement id
-TransactionEditingPreferencesPanel.format.customized=Customized
-TransactionEditingPreferencesPanel.format.customized.tooltip=Select this to enter a customized format
-TransactionEditingPreferencesPanel.format.customized.invalidFormat=Invalid format
-TransactionEditingPreferencesPanel.format.customized.sample=(example: {0})
+TransactionEditingPreferencesPanel.format.long.tooltip=Selecione este para longa identificação da conta
+TransactionEditingPreferencesPanel.format.short=Estilo curto (example: {0})
+TransactionEditingPreferencesPanel.format.short.tooltip=Selecione este para curta identificação da conta
+TransactionEditingPreferencesPanel.format.customized=Personalizados
+TransactionEditingPreferencesPanel.format.customized.tooltip=Selecione esta para editar um formato personalizado
+TransactionEditingPreferencesPanel.format.customized.invalidFormat=Formato inválido
+TransactionEditingPreferencesPanel.format.customized.sample=(exemplo: {0})
 #translators note: be aware in the following line that the format codes don't depend on the language (yyyy is always yyyy, even in french where it could have been aaaa).
-TransactionEditingPreferencesPanel.format.customizedField.tooltip=<html>Enter the customized format in this field.<ul><li>yyyy: year on 4 digits</li><li>yy: year on 2 digits</li><li>MM: month on two digits</li><li>MMM: short month name (example Jul.)</li><li>MMMM: full month name</li><li>w: Week in year</li><li>W: Week in month</li></ul></html>
-TransactionEditingPreferencesPanel.okDisabledCauseFormat=The date format entered in the '"{0}'" tab is wrong
-TransactionEditingPreferencesPanel.duplicateTransaction.keepOriginalDate=Set the date field to the original date
-TransactionEditingPreferencesPanel.duplicateTransaction.keepOriginalDate.tooltip=Select this to keep the original date in the new transaction
-TransactionEditingPreferencesPanel.duplicateTransaction.setDateToCurrent=Set the date field to the current date
-TransactionEditingPreferencesPanel.duplicateTransaction.setDateToCurrent.tooltip=Select this to set the date of the new transaction to the current date
-TransactionEditingPreferencesPanel.duplicateTransaction.title=When duplicating a transaction:
+TransactionEditingPreferencesPanel.format.customizedField.tooltip=<html>Edite um formato personalizado nos campos.<ul><li>yyyy: ano em 4 dígitos</li><li>yy: ano em 2 dígitos</li><li>MM: Mês em dois dígitos</li><li>MMM: curto name para mês (exemplo Jul.)</li><li>MMMM: nome completo do mês</li><li>w: Semanas no ano</li><li>W: semanas no mês</li></ul></html>
+TransactionEditingPreferencesPanel.okDisabledCauseFormat=O formato da data editada na '"{0}'" aba está errada
+TransactionEditingPreferencesPanel.duplicateTransaction.keepOriginalDate=Coloca a data no campo para a data original
+TransactionEditingPreferencesPanel.duplicateTransaction.keepOriginalDate.tooltip=Selecione este para manter a data original na nova transação
+TransactionEditingPreferencesPanel.duplicateTransaction.setDateToCurrent=Coloca a data no campo para a data atual
+TransactionEditingPreferencesPanel.duplicateTransaction.setDateToCurrent.tooltip=Selecione este para colocar a data da nova transação para a data atual
+TransactionEditingPreferencesPanel.duplicateTransaction.title=Quando estiver duplicando uma transação:
 
 #Alert dialogs
-ModifyCheckedTransactionAlert.title=Checked transaction change
-ModifyCheckedTransactionAlert.message=You are about to change a checked transaction.
-DeleteCheckedTransactionAlert.title=Checked transaction deletion
-DeleteCheckedTransactionAlert.message=You are about to delete a checked transaction.
-DeleteTransactionAlert.title=Transaction deletion
-DeleteTransactionAlert.message=You are about to delete a transaction.
+ModifyCheckedTransactionAlert.title=Mudar uma transação já selecionada
+ModifyCheckedTransactionAlert.message=Você está prestes a mudar uma transação já selecionada.
+DeleteCheckedTransactionAlert.title=Deletar uma transação já selecionada
+DeleteCheckedTransactionAlert.message=Você está prestes a deletar uma transação já selecionada.
+DeleteTransactionAlert.title=Deletar uma transação
+DeleteTransactionAlert.message=Você está prestes a deletar uma transação.
 
 #A generic button in the alert dialog to desactivate the alert
-GenericButton.dontAskMeAnyMore=Don't ask me anymore
+GenericButton.dontAskMeAnyMore=Não me pergunte mais
 
 #-------- New preference sub-panel about general graphic theme -------
-PreferencesDialog.Theme.title=Theme
-PreferencesDialog.Theme.toolTip=This tab allows you to choose Yapbam's graphical theme
+PreferencesDialog.Theme.title=Tema
+PreferencesDialog.Theme.toolTip=Esta aba permite-lhe escolher o tema gráfico do Yapbam
