--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -8,7 +8,7 @@ MainFrame.CheckedBalance.ToolTip=Solde actuel (ne tient compte que des opération
 MainFrame.CurrentBalance.ToolTip=Solde actuel (ne tient pas compte des opérations dont la date de valeur est postérieure à aujourd'hui)
 MainFrame.FinalBalance.ToolTip=Solde final (tient compte de toutes les opérations)
 MainFrame.Transactions=Opérations
-MainFrame.Transactions.toolTip=Table des opérations et divers outils pour créer, dupliquer, pointer, ... des opérations
+MainFrame.Transactions.toolTip=Table des opérations et divers outils pour créer, dupliquer, ... des opérations
 MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Solde négatif : {0}
 MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Solde positif : {0}
 MainFrame.Transactions.Preferences.balanceSummary.title=Récapitulatif des soldes
@@ -166,6 +166,7 @@ MainMenu.web.yapbam=Visiter le site web de Yapbam
 MainMenu.web.yapbam.tooltip=Ouvre le site web de Yapbam (requiert une connexion Internet)
 
 BalanceHistory.title=Historique du solde
+BalanceHistory.graph.title=Graphique
 BalanceHistory.graph.toolTip=Graphique de l'évolution du solde au jour le jour
 BalanceHistory.balance=Solde au {0} : {1}
 BalanceHistory.chart.toolTip=Déplacez la barre verticale pour afficher le solde du jour correspondant ci-dessous
@@ -177,6 +178,10 @@ BalanceHistory.alertTooltipAdd=Première alerte le {0}
 BalanceHistory.alerts=Alertes :
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.alerts.toolTip=Sélectionnez une alerte dans ce menu pour visualiser l'historique du solde du compte qu'elle concerne (Ceci changera le filtre)
+BalanceHistory.toolTip=Evolution du solde au jour le jour
+BalanceHistory.transaction.title=Opérations
+BalanceHistory.transaction.tooltip=Opérations et solde au jour le jour
+BalanceHistory.transaction.remainingBalance=Solde restant
 
 AboutDialog.Content=<html>Copyright &copy; 2009-2011 <b>{0}</b> - Tous droits réservés<br>Version : <b>{1}</b></html>
 AboutDialog.License.TabName=License
@@ -261,6 +266,8 @@ GenericButton.yes=Oui
 GenericButton.no=Non
 GenericButton.ignore=Ignorer
 GenericButton.continue=Continuer
+#A generic button in the alert dialog to desactivate the alert
+GenericButton.dontAskMeAnyMore=Ne plus me demander
 
 Transaction.0=S/O
 Transaction.account=Compte
@@ -361,10 +368,9 @@ PreferencesDialog.AutoUpdate.title=Mises à jour
 
 PreferencesDialog.LookAndFeel.title=Apparence
 PreferencesDialog.LookAndFeel.toolTip=Cet onglet permet de configurer l'apparence de Yapbam
-#PreferencesDialog.LookAndFeel.java=Apparence indépendante du système
-#PreferencesDialog.LookAndFeel.java.toolTip=Cliquer sur ce bouton pour que l'interface de Yapbam soit indépendante du système
-#PreferencesDialog.LookAndFeel.platform=Apparence du système
-#PreferencesDialog.LookAndFeel.platform.toolTip=Cliquez sur ce bouton pour que l'interface de Yapbam soit celle par défaut du système
+#-------- preference sub-panel about general graphic theme -------
+PreferencesDialog.Theme.title=Thème
+PreferencesDialog.Theme.toolTip=Cet onglet permet de choisir le thème visuel de l'interface
 
 PreferencesDialog.Network.title=Réseau
 PreferencesDialog.Network.toolTip=Cet onglet permet de configurer comment Yapbam se connecte à Internet
@@ -773,14 +779,11 @@ Welcome.lastTip.tooltip=Affiche la dernière astuce
 
 Tip.1=<html>L''apparence de Yapbam peut être paramétrée dans les préférences.<hr style="width:40%">Pour la modifier, sélectionnez <b>{1}</b> dans le menu <b>{0}</b>, puis rendez vous dans l''onglet <b>{2}</b></html>
 Tip.2=<html>Vous pouvez définir des seuils d''alerte sur chacun de vos comptes.<hr style="width:40%">Par défaut, une alerte (affichage d''une icône dans le titre de l''onglet <b>{0}</b>) est émise si le solde du compte devient négatif.<br>Vous pouvez changer ce seuil dans l''onglet <b>{1}</b>.<br>Vous pouvez également y définir un seuil d''alerte lorsque le solde dépasse un certain montant.</html>
-Tip.3=<html>Vos opérations courantes peuvent être générées automatiquement.<hr style="width:40%">Pour ce faire, vous pouvez définir des <b>opérations périodiques</b> dans l''onglet <b>{0}</b>.<br>Un moyen encore plus simple est de sélectionner une opération puis <b>{1}</b> dans le menu contextuel (clic-droit sur l'opération).</html>
+Tip.3=<html>Vos opérations courantes peuvent être générées automatiquement.<hr style="width:40%">Pour ce faire, vous pouvez définir des <b>opérations périodiques</b> dans l''onglet <b>{0}</b>.<br>Un moyen encore plus simple est de sélectionner une opération puis <b>{1}</b> dans le menu contextuel (clic-droit sur l''opération).</html>
 Tip.4=<html>Pensez à utiliser le clic droit.<hr style="width:40%">Un clic-droit sur une opération permet de la modifier, la dupliquer ou la supprimer rapidement.</html>
-Tip.5=<html>L''onglet <b>{0}</b> permet d''effectuer de nombreuses modifications :<hr style="width:40%">- Editer, créer, supprimer les opérations périodiques.<br>- Renommer les comptes, en modifier les soldes initiaux, les seuils d'alerte, les modes de paiement. Gérer les chéquiers<br>- Renommer les catégories<br>- etc...</li></ul></html>
+Tip.5=<html>L''onglet <b>{0}</b> permet d''effectuer de nombreuses modifications :<hr style="width:40%">- Editer, créer, supprimer les opérations périodiques.<br>- Renommer les comptes, en modifier les soldes initiaux, les seuils d''alerte, les modes de paiement. Gérer les chéquiers<br>- Renommer les catégories<br>- etc...</li></ul></html>
 Tip.6=<html>Vous pouvez accélérez vos saisies grâce aux raccourcis clavier.<hr style="width:40%">Lorsque vous éditez une date, la <b>flèche haute</b> passe au lendemain, la <b>flèche basse</b> passe à la veille.<br>De même, pour les saisies de nombres (par exemple, le nombre de chèques dans un chéquier), ces flèches augmentent ou diminuent d'une unité.</html>
 #-------- end of the welcome screen part --------
-
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
 
 #-------- Fixes to statement view --------
 #These wordings were not localized in the "statement" tab
@@ -797,14 +800,6 @@ AccountsSummary.CheckedBalance=Solde pointé
 AccountsSummary.CurrentBalance=Solde courant
 AccountsSummary.FinalBalance=Solde final
 #-------- End of AccountsSummaryView --------
-
-#-------- Balance History view --------
-#Introducing a new sub-panel in the balance history panel
-BalanceHistory.toolTip=Evolution du solde au jour le jour
-BalanceHistory.graph.title=Graphique
-BalanceHistory.transaction.title=Opérations
-BalanceHistory.transaction.tooltip=Opérations et solde au jour le jour
-BalanceHistory.transaction.remainingBalance=Solde restant
 
 #-------- New "important news" screen -------
 ImportantNews.title=Nouvelles importantes
@@ -850,9 +845,5 @@ DeleteCheckedTransactionAlert.message=Vous êtes sur le point de supprimer une op
 DeleteTransactionAlert.title=Suppression d'une opération
 DeleteTransactionAlert.message=Vous êtes sur le point de supprimer une opération.
 
-#A generic button in the alert dialog to desactivate the alert
-GenericButton.dontAskMeAnyMore=Ne plus me demander
-
-#-------- New preference sub-panel about general graphic theme -------
-PreferencesDialog.Theme.title=Thème
-PreferencesDialog.Theme.toolTip=Cet onglet permet de choisir le thème visuel de l'interface
+#---------------------------------------------------------------------------------------------------------------------------------
+# Added or modified since last translation
