--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -8,7 +8,7 @@ MainFrame.CheckedBalance.ToolTip=Balan\u00e7o da moeda verificada (transa\u00E7\
 MainFrame.CurrentBalance.ToolTip=Balan\u00e7o atual (transa\u00E7\u00F5es com valores a p\u00E1rtir da data de hoje ser\u00E3o ignoradas)
 MainFrame.FinalBalance.ToolTip=Balan\u00e7o final ( nenhuma transa\u00E7\u00E3o ser\u00E1 ignorada)
 MainFrame.Transactions=Transa\u00E7\u00F5es
-MainFrame.Transactions.toolTip=Mostra a tabela de transa\u00E7\u00F5es e as ferramentas de ediç\u00E3o, duplicados, verificar...
+MainFrame.Transactions.toolTip=Mostra a tabela de transa\u00E7\u00F5es e as ferramentas de ediç\u00E3o, duplicados...
 MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Balan\u00e7o negativo: {0}
 MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Balan\u00e7o positivo: {0}
 MainFrame.Transactions.Preferences.balanceSummary.title=Sum\u00E1rio de balan\u00e7o
@@ -167,6 +167,8 @@ MainMenu.web.yapbam=Visit Yapbam site
 MainMenu.web.yapbam.tooltip=Abri Yapbam site (necessita de conexão com a Internet)
 
 BalanceHistory.title=Hist\u00F3ria do Balan\u00E7o
+BalanceHistory.toolTip=balanço diário
+BalanceHistory.graph.title=gráfico
 BalanceHistory.graph.toolTip=Gr\u00E1fico do balan\u00E7o do dia
 BalanceHistory.balance=Balan\u00E7o do {0} : {1}
 BalanceHistory.chart.toolTip=Move a barra vertical para mostrar abaixo o balan\u00E7o de outro dia
@@ -179,6 +181,9 @@ BalanceHistory.alertTooltipAdd=Primeiro alerta no {0}
 #next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.alerts.toolTip=Selecione um alerta neste menu para ver o histórico do balanço da conta correspondente (muda o filtro atual)
+BalanceHistory.transaction.title=Transações
+BalanceHistory.transaction.tooltip=Transações e balanço diário
+BalanceHistory.transaction.remainingBalance=balanço restante
 
 AboutDialog.Content=<html>Direitos de cópia &copy; 2009-2011 <b>{0}</b> - Todos os direitos reservado<br>Vers\u00E3o: <b>{1}</b></html>
 AboutDialog.License.TabName=Licen\u00E7a
@@ -263,6 +268,8 @@ GenericButton.yes=Sim
 GenericButton.no=n\u00E3o
 GenericButton.ignore=Ignorar
 GenericButton.continue=Continuar
+#A generic button in the alert dialog to desactivate the alert
+GenericButton.dontAskMeAnyMore=Não me pergunte mais
 
 Transaction.0=S/T
 Transaction.account=Conta
@@ -360,10 +367,9 @@ PreferencesDialog.AutoUpdate.toolTip=Esta aba permite-lhe configurar a procura p
 
 PreferencesDialog.LookAndFeel.title=Apar\u00EAncias
 PreferencesDialog.LookAndFeel.toolTip=Esta aba permite-lhe configurar a apar\u00EAncia do Yapbam
-#PreferencesDialog.LookAndFeel.java=Apar\u00EAncia independente do sistema
-#PreferencesDialog.LookAndFeel.java.toolTip=Clique neste bot\u00E3o para o Yapbam usar apar\u00EAncia independente do sistema
-#PreferencesDialog.LookAndFeel.platform=Sistema padr\u00E3o de apar\u00EAncias
-#PreferencesDialog.LookAndFeel.platform.toolTip=Clique para o Yapbam usar o sistema padr\u00E3o de apar\u00EAncias
+#-------- preference sub-panel about general graphic theme -------
+PreferencesDialog.Theme.title=Tema
+PreferencesDialog.Theme.toolTip=Esta aba permite-lhe escolher o tema gráfico do Yapbam
 
 PreferencesDialog.Network.title=Rede
 PreferencesDialog.Network.toolTip=Esta aba permite-lhe configurar como ser\u00E1 a conex\u00E3o do Yapbam para a Internet
@@ -799,9 +805,6 @@ Tip.5=<html>A <b>{0}</b> aba permite-lhe fazer muitas mudanças:<hr style="width:
 Tip.6=<html>Você pode fazer suas "entradas" mais rápidas com os atalhos to teclado.<hr style="width:40%">Quando você digitar uma data, a <b>flecha pra cima</b> aumenta a data por um dia, e<b>flecha pra baixo</b> diminui a data por um dia.<br>Semelhante, para os números de entradas (por exemplo, o número de checks no checkbook), estas flechas aumentam ou diminuem o número por um.</html>
 #-------- end of the welcome screen part --------
 
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
-
 #-------- AccountsSummary View --------
 AccountsSummary.title=Sumário da conta
 AccountsSummary.tooltip=Sumário de todas as contas
@@ -809,14 +812,6 @@ AccountsSummary.CheckedBalance=Balan\u00e7o verificado
 AccountsSummary.CurrentBalance=Balan\u00e7o atual
 AccountsSummary.FinalBalance=Balan\u00e7o final
 #-------- End of AccountsSummaryView --------
-
-#-------- Balance History view --------
-#Introducing a new sub-panel in the balance history panel
-BalanceHistory.toolTip=balanço diário
-BalanceHistory.graph.title=gráfico
-BalanceHistory.transaction.title=Transações
-BalanceHistory.transaction.tooltip=Transações e balanço diário
-BalanceHistory.transaction.remainingBalance=balanço restante
 
 #-------- New "important news" screen -------
 ImportantNews.title=Notícias Importantes
@@ -862,9 +857,7 @@ DeleteCheckedTransactionAlert.message=Você está prestes a deletar uma transação 
 DeleteTransactionAlert.title=Deletar uma transação
 DeleteTransactionAlert.message=Você está prestes a deletar uma transação.
 
-#A generic button in the alert dialog to desactivate the alert
-GenericButton.dontAskMeAnyMore=Não me pergunte mais
+#---------------------------------------------------------------------------------------------------------------------------------
+# Added or modified since last translation
 
-#-------- New preference sub-panel about general graphic theme -------
-PreferencesDialog.Theme.title=Tema
-PreferencesDialog.Theme.toolTip=Esta aba permite-lhe escolher o tema gráfico do Yapbam
+
