--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -92,23 +92,28 @@ MainMenu.Transactions.New.ToolTip=Crée une nouvelle opération
 
 MainMenu.Transactions.Duplicate=Dupliquer l'opération
 MainMenu.Transactions.Duplicate.ToolTip=Duplique l'opération sélectionnée
+MainMenu.Transactions.Duplicate.Mnemonic=D
+MainMenu.Transactions.Duplicate.Accelerator=D
 
 MainMenu.Transactions.Edit=Modifier l'opération
 MainMenu.Transactions.Edit.Mnemonic=M
+MainMenu.Transactions.Edit.Accelerator=M
 MainMenu.Transactions.Edit.ToolTip=Modifie l'opération sélectionnée
 
 MainMenu.Transactions.Delete=Effacer l'opération
 MainMenu.Transactions.Delete.Mnemonic=E
-MainMenu.Transactions.Delete.Accelerator=E
+#MainMenu.Transactions.Delete.Accelerator=E
 MainMenu.Transactions.Delete.ToolTip=Efface l'opération sélectionnée
 
 MainMenu.Transactions.Check=Pointer l'opération
 MainMenu.Transactions.Check.ToolTip=Pointe l'opération sélectionnée
+MainMenu.Transactions.Check.Mnemonic=P
 MainMenu.Transactions.convertToPeriodical=Convertir en opération périodique
 MainMenu.Transactions.convertToPeriodical.ToolTip=Créé une nouvelle opération périodique prenant cette opération comme modèle
+MainMenu.Transactions.convertToPeriodical.Mnemonic=C
 
 MainMenu.Transactions.Periodical=Générer les opérations périodiques
-MainMenu.Transactions.Periodical.Mnemonic=P;
+MainMenu.Transactions.Periodical.Mnemonic=G;
 MainMenu.Transactions.Periodical.ToolTip=Génére les opérations périodiques
 
 MainMenuBar.Filter=Filtre
