--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -93,23 +93,28 @@ MainMenu.Transactions.New.ToolTip=Cria transa\u00E7\u00F5es novas
 
 MainMenu.Transactions.Duplicate=Duplicar transa\u00E7\u00F5es
 MainMenu.Transactions.Duplicate.ToolTip=Duplica a transa\u00e7\u00E3o selecionada
+MainMenu.Transactions.Duplicate.Mnemonic=D
+MainMenu.Transactions.Duplicate.Accelerator=D
 
 MainMenu.Transactions.Edit=Editar transa\u00E7\u00F5es
 MainMenu.Transactions.Edit.Mnemonic=E
 MainMenu.Transactions.Edit.ToolTip=Edite a transa\u00e7\u00E3o selecionada
+MainMenu.Transactions.Edit.Accelerator=E
 
 MainMenu.Transactions.Delete=Deletar transa\u00E7\u00F5es
 MainMenu.Transactions.Delete.Mnemonic=D
-MainMenu.Transactions.Delete.Accelerator=D
+#MainMenu.Transactions.Delete.Accelerator=D
 MainMenu.Transactions.Delete.ToolTip=Deleta a transa\u00e7\u00E3o selecionada
 
 MainMenu.Transactions.Check=Verificar transa\u00E7\u00F5es
 MainMenu.Transactions.Check.ToolTip=Verifique a transa\u00e7\u00E3o selecionada
+MainMenu.Transactions.Check.Mnemonic=V
 MainMenu.Transactions.convertToPeriodical=Converter para transa\u00e7\u00E3o peri\u00F3dica
 MainMenu.Transactions.convertToPeriodical.ToolTip=Cria uma transa\u00e7\u00E3o peri\u00F3dica baseado no tipo de transa\u00e7\u00E3o
+MainMenu.Transactions.convertToPeriodical.Mnemonic=C
 
 MainMenu.Transactions.Periodical=Gerar transa\u00E7\u00F5es peri\u00F3dicas
-MainMenu.Transactions.Periodical.Mnemonic=P;
+MainMenu.Transactions.Periodical.Mnemonic=G;
 MainMenu.Transactions.Periodical.ToolTip=Gera transa\u00E7\u00F5es peri\u00F3dicas
 
 MainMenuBar.Filter=Filtro
