--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -865,4 +865,15 @@ DeleteTransactionAlert.message=Você está prestes a deletar uma transação.
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
 
+# This new preference dialog tab allows the user to set what is remembered between Yapbam launches
+PreferencesDialog.StartState.title=Launch state
+PreferencesDialog.StartState.tooltip=This tab allows you to configure what is remembered between Yapbam launches
+PreferencesDialog.StartState.tabOrder=Remember the tabs order
+PreferencesDialog.StartState.tabOrder.tooltip=Check this box to keep tabs order between Yapbam launches
+PreferencesDialog.StartState.hiddenColumns=Remember hidden columns
+PreferencesDialog.StartState.hiddenColumns.tooltip=Check this box to keep hidden columns between Yapbam launches
+PreferencesDialog.StartState.openedFile=Remember last opened file
+PreferencesDialog.StartState.openFile.tooltip=Check this box to automatically reopen last opened file at startup
+PreferencesDialog.StartState.filter=Remember the filter 
+PreferencesDialog.StartState.filter.tooltip=Check this box to remember the filter between Yapbam launches
 
