--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -865,13 +865,19 @@ DeleteTransactionAlert.message=Você está prestes a deletar uma transação.
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
 
-# This new preference dialog tab allows the user to set what is remembered between Yapbam launches
+# This new preference dialog tab allows the user to set what is remembered or not between Yapbam launches
 PreferencesDialog.StartState.title=Launch state
 PreferencesDialog.StartState.tooltip=This tab allows you to configure what is remembered between Yapbam launches
-PreferencesDialog.StartState.tabOrder=Remember the tabs order
-PreferencesDialog.StartState.tabOrder.tooltip=Check this box to keep tabs order between Yapbam launches
+PreferencesDialog.StartState.tabsOrder=Remember the tabs order
+PreferencesDialog.StartState.tabsOrder.tooltip=Check this box to keep tabs order between Yapbam launches
+PreferencesDialog.StartState.tableTitle=Tables
+PreferencesDialog.StartState.columnsWidth=Remember the columns width
+PreferencesDialog.StartState.columnsWidth.tooltip=Check this box to keep columns width between Yapbam launches
+PreferencesDialog.StartState.columnsOrder=Remember the columns order
+PreferencesDialog.StartState.columnsOrder.tooltip=Check this box to keep columns order between Yapbam launches
 PreferencesDialog.StartState.hiddenColumns=Remember hidden columns
 PreferencesDialog.StartState.hiddenColumns.tooltip=Check this box to keep hidden columns between Yapbam launches
+PreferencesDialog.StartState.dataTitle=Data
 PreferencesDialog.StartState.openedFile=Remember last opened file
 PreferencesDialog.StartState.openFile.tooltip=Check this box to automatically reopen last opened file at startup
 PreferencesDialog.StartState.filter=Remember the filter 
