--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -856,10 +856,16 @@ DeleteTransactionAlert.message=Vous êtes sur le point de supprimer une opération
 # This new preference dialog tab allows the user to set what is remembered between Yapbam launches
 PreferencesDialog.StartState.title=Etat au lancement
 PreferencesDialog.StartState.tooltip=Cet onglet permet de régler les informations à conserver entre deux exécution de Yapbam
-PreferencesDialog.StartState.tabOrder=Conserver l'ordre des onglets
-PreferencesDialog.StartState.tabOrder.tooltip=Cochez cette case pour que l'ordre des onglets soit conservé d'une exécution à l'autre
+PreferencesDialog.StartState.tabsOrder=Conserver l'ordre des onglets
+PreferencesDialog.StartState.tabsOrder.tooltip=Cochez cette case pour que l'ordre des onglets soit conservé d'une exécution à l'autre
+PreferencesDialog.StartState.tableTitle=Tableaux
+PreferencesDialog.StartState.columnsWidth=Conserver la largeur de colonnes
+PreferencesDialog.StartState.columnsWidth.tooltip=Cochez cette case pour conserver la largeur des colonnes dans les tableaux d'une exécution à l'autre
+PreferencesDialog.StartState.columnsOrder=Conserver l'ordre de colonnes
+PreferencesDialog.StartState.columnsOrder.tooltip=Cochez cette case pour conserver l'ordre des colonnes dans les tableaux d'une exécution à l'autre
 PreferencesDialog.StartState.hiddenColumns=Conserver les masquages de colonnes
 PreferencesDialog.StartState.hiddenColumns.tooltip=Cochez cette case pour que les colonnes masquées le restent d'une exécution à l'autre
+PreferencesDialog.StartState.dataTitle=Données
 PreferencesDialog.StartState.openedFile=Se rappeler du dernier fichier ouvert
 PreferencesDialog.StartState.openFile.tooltip=Cochez cette case pour réouvrir automatiquement au lancement le dernier fichier ouvert
 PreferencesDialog.StartState.filter=Conserver le filtre
