--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -870,3 +870,12 @@ PreferencesDialog.StartState.openedFile=Se rappeler du dernier fichier ouvert
 PreferencesDialog.StartState.openFile.tooltip=Cochez cette case pour réouvrir automatiquement au lancement le dernier fichier ouvert
 PreferencesDialog.StartState.filter=Conserver le filtre
 PreferencesDialog.StartState.filter.tooltip=Cochez cette case pour conserver le filtre d'une exécution à l'autre
+Tip.7=<html>Conservez le filtre d'une éxécution à l'autre de Yapbam.<hr style="width:40%">TODO.</html>
+
+# A new button is available in the "new transaction dialog", it allows the user to validate the edited transaction
+# without closing the dialog (the dialog is resetted to its empty state).
+# In order to keep it simple for the newbie, this button only appears when the user makes press the shift key while opening the dialog
+TransactionDialog.next=Suivant
+TransactionDialog.next.tooltip=Cliquez sur ce bouton pour valider l'opération et en débuter la saisie d'une nouvelle
+Tip.8=<html>Saisissez vos opérations en masse.<hr style="width:40%">Lorsque vous créez une nouvelle opération en maintenant la touche <b>majuscule</b> pressée, un nouveau bouton apparaît.<br>Celui-ci valide l'opération en cours d'édition et réinitialise le dialogue, vous permettant ainsi de gagner du temps quand vous devez saisir de nombreuses opérations.</html>
+
