--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -883,3 +883,8 @@ PreferencesDialog.StartState.openFile.tooltip=Check this box to automatically re
 PreferencesDialog.StartState.filter=Remember the filter 
 PreferencesDialog.StartState.filter.tooltip=Check this box to remember the filter between Yapbam launches
 
+# A new button is available in the "new transaction dialog", it allows the user to validate the edited transaction
+# without closing the dialog (the dialog is resetted to its empty state).
+# In order to keep it simple for the newbie, this button only appears when the user makes press the shift key while opening the dialog
+TransactionDialog.next=Next
+TransactionDialog.next.tooltip=Click to validate the transaction and reset the dialog and start editing a new transaction
