--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -870,12 +870,14 @@ PreferencesDialog.StartState.openedFile=Se rappeler du dernier fichier ouvert
 PreferencesDialog.StartState.openFile.tooltip=Cochez cette case pour réouvrir automatiquement au lancement le dernier fichier ouvert
 PreferencesDialog.StartState.filter=Conserver le filtre
 PreferencesDialog.StartState.filter.tooltip=Cochez cette case pour conserver le filtre d'une exécution à l'autre
-Tip.7=<html>Conservez le filtre d'une éxécution à l'autre de Yapbam.<hr style="width:40%">TODO.</html>
+Tip.7=<html>Conservez le filtre d''une exécution à l''autre de Yapbam.<hr style="width:40%">Dans le dialogue ouvert par le menu <b>{0}</b>/<b>{1}</b>, l''onglet <b>{2}</b> permet de régler quelles informations sont conservées d''une exécution à l''autre de Yapbam, en particulier, le dernier filtre activé.</html>
 
 # A new button is available in the "new transaction dialog", it allows the user to validate the edited transaction
 # without closing the dialog (the dialog is resetted to its empty state).
 # In order to keep it simple for the newbie, this button only appears when the user makes press the shift key while opening the dialog
 TransactionDialog.next=Suivant
 TransactionDialog.next.tooltip=Cliquez sur ce bouton pour valider l'opération et en débuter la saisie d'une nouvelle
-Tip.8=<html>Saisissez vos opérations en masse.<hr style="width:40%">Lorsque vous créez une nouvelle opération en maintenant la touche <b>majuscule</b> pressée, un nouveau bouton apparaît.<br>Celui-ci valide l'opération en cours d'édition et réinitialise le dialogue, vous permettant ainsi de gagner du temps quand vous devez saisir de nombreuses opérations.</html>
+MainMenu.Transactions.NewMultiple=Saisie d'opérations en rafale
+MainMenu.Transactions.NewMultiple.ToolTip=Ouvre le dialogue de création des opérations dans le mode de saisie rapide d'opérations multiples
+Tip.8=<html>Saisissez vos opérations en masse.<hr style="width:40%">Lorsque vous ouvrez le dialogue de création d''une nouvelle opération en maintenant la touche <b>majuscule</b> pressée, un nouveau bouton <b>"{0}"</b> apparaît.<br>Celui-ci valide l''opération en cours d'édition et réinitialise le dialogue, vous permettant ainsi de gagner du temps quand vous devez saisir de nombreuses opérations.</html>
 
