--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -888,3 +888,19 @@ PreferencesDialog.StartState.filter.tooltip=Check this box to remember the filte
 # In order to keep it simple for the newbie, this button only appears when the user makes press the shift key while opening the dialog
 TransactionDialog.next=Next
 TransactionDialog.next.tooltip=Click to validate the transaction and reset the dialog and start editing a new transaction
+MainMenu.Transactions.NewMultiple=New bulk transactions
+MainMenu.Transactions.NewMultiple.ToolTip=Opens the transaction dialog for creating multiple transactions
+Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the transaction creation dialog with the <b>shift</b> key pressed, a button <b>'"{0}'"</b> appears.<br>It validates the current transaction and reset the dialog. This allows you to save time when you must enter many transactions.</html>
+
+#A new transaction's attribute: a comment
+Transaction.comment=Comment
+#Field tooltip in the "new transaction" dialog
+TransactionDialog.comment.tooltip=Enter the transaction comment
+#New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
+MainFrame.Transactions.Preferences.commentDisplay=Show transaction's comment in a separate column from description
+MainFrame.Transactions.Preferences.commentDisplay.tooltip=Check this box to display comment in a separate column (Otherwise, the comment will be placed in parentheses after the description)
+#Tooltips of the comment filter box
+CustomFilterPanel.comment.toolTip=Text to compare with transaction's comment
+CustomFilterPanel.comment.contains.toolTip=Select this if the comment should contain the entered text
+CustomFilterPanel.comment.equals.toolTip=Select this if the comment should be the same as the entered text
+CustomFilterPanel.comment.regularExpression.toolTip=Select this if the comment should satisfy the following regular expression
